# FastFoodGo

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: api.py  business.py
tests/: test_api.py  test_business.py
